add guide to setup system service for masternode

--- a/guide/index.html
+++ b/guide/index.html
@@ -66,6 +66,7 @@ permalink: /guide/index.html
                             <li><a href="{{ site.baseurl }}/guide/masternode-upgrade.html">Upgrading your Firo masternode</a></li>
                             <li><a href="{{ site.baseurl }}/guide/reindex-wallet.html">Reindexing your Firo wallet</a></li>
                             <li><a href="{{ site.baseurl }}/guide/troubleshooting-masternode.html">Troubleshooting masternode: PoSe score and PoSe ban</a></li>
+                            <li><a href="{{ site.baseurl }}/guide/masternode-system-managers.html">Set up your masternode with a system manager</a></li>
                         </ul>
                   </div>
               </div>
